name:                app
version:             0.1.0.0
synopsis:            Space game
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base, containers, miso, random
  default-language:    Haskell2010
  other-modules:       Game, Action, Model, Update, View

test-suite test-name
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src, test
  main-is:             GameSpec.hs
  build-depends:       base, hspec
